Package_Tools/include-C/mgl2/c/in_arbeit/fertig/canvas_cf.h


/// Ask to set perspective (in range [0,1)) for plot. Set to zero for switching off.
void  mgl_ask_perspective(HMGL gr, double val);

/// Set angle of view independently from Rotate().
void  mgl_view(HMGL gr, double TetX,double TetZ,double TetY);

/// Zoom in/out a part of picture (use mgl_zoom(0, 0, 1, 1) for restore default)
void  mgl_zoom(HMGL gr, double x1, double y1, double x2, double y2);


//-----------------------------------------------------------------------------

/// Create HMPR object for parsing MGL scripts
HMPR  mgl_create_parser();

uintptr_t  mgl_create_parser_();

/// Change counter of HMPR uses (for advanced users only). Non-zero counter prevent automatic object removing.
long  mgl_use_parser(HMPR p, int inc);

/// Delete HMPR object
void  mgl_delete_parser(HMPR p);

/// Set value for parameter $N
void  mgl_parser_add_param(HMPR p, int id, const char *str);

void  mgl_parser_add_paramw(HMPR p, int id, const wchar_t *str);


/// Find variable with given name or add a new one
/// NOTE !!! You must not delete obtained data arrays !!!
 mglDataA *mgl_parser_add_var(HMPR p, const char *name);

 mglDataA *mgl_parser_add_varw(HMPR p, const wchar_t *name);

/// Find variable with given name or return NULL if no one
/// NOTE !!! You must not delete obtained data arrays !!!
 mglDataA *mgl_parser_find_var(HMPR p, const char *name);

 mglDataA *mgl_parser_find_varw(HMPR p, const wchar_t *name);

/// Get variable with given id
/// NOTE !!! You must not delete obtained data arrays !!!
 mglDataA *mgl_parser_get_var(HMPR p, unsigned long id);

/// Get number of variables
long  mgl_parser_num_var(HMPR p);


/// Get constant with given id
/// NOTE !!! You must not delete obtained data arrays !!!
 mglNum *mgl_parser_get_const(HMPR p, unsigned long id);

/// Get number of constants
long  mgl_parser_num_const(HMPR p);


/// Delete variable with name
void  mgl_parser_del_var(HMPR p, const char *name);

void  mgl_parser_del_varw(HMPR p, const wchar_t *name);

/// Delete all data variables
void  mgl_parser_del_all(HMPR p);


/// Load new commands from external dynamic Library (must have "const mglCommand *mgl_cmd_extra" variable)
void  mgl_parser_load(HMPR pr, const char *dll_name);


/// Apply one step for equation d vars[i]/dt = eqs[i] using Runge-Kutta method
void  mgl_rk_step(HMPR pr, const char *eqs, const char *vars, mreal dt);

void  mgl_rk_step_w(HMPR pr, const wchar_t *eqs, const wchar_t *vars, mreal dt);


// Open all data arrays from HDF file and assign it as variables of parser p
void  mgl_parser_openhdf(HMPR p, const char *fname);


/// Parse and draw single line of the MGL script
int  mgl_parse_line(HMGL gr, HMPR p, const char *str, int pos);

int  mgl_parse_linew(HMGL gr, HMPR p, const wchar_t *str, int pos);

/// Execute and draw script from the file
void  mgl_parse_file(HMGL gr, HMPR p, FILE *fp, int print);

/// Execute MGL script text with '\n' separated lines
void  mgl_parse_text(HMGL gr, HMPR p, const char *str);

void  mgl_parse_textw(HMGL gr, HMPR p, const wchar_t *str);


/// Restore once flag
void  mgl_parser_restore_once(HMPR p);

/// Allow changing size of the picture
void  mgl_parser_allow_setsize(HMPR p, int a);

/// Allow reading/saving files
void  mgl_parser_allow_file_io(HMPR p, int a);

/// Allow loading commands from external libraries
void  mgl_parser_allow_dll_call(HMPR p, int a);

/// Set flag to stop script parsing
void  mgl_parser_stop(HMPR p);

/// Set variant of argument(s) separated by '?' to be used
void  mgl_parser_variant(HMPR p, int var);

/// Set starting object ID
void  mgl_parser_start_id(HMPR p, int id);



/// Return type of command: 0 - not found, 1 - data plot, 2 - other plot,
///		3 - setup, 4 - data handle, 5 - data create, 6 - subplot, 7 - program
///		8 - 1d plot, 9 - 2d plot, 10 - 3d plot, 11 - dd plot, 12 - vector plot
///		13 - axis, 14 - primitives, 15 - axis setup, 16 - text/legend, 17 - data transform
int  mgl_parser_cmd_type(HMPR pr, const char *name);

/// Return description of MGL command
 const char *mgl_parser_cmd_desc(HMPR pr, const char *name);

/// Return string of command format (command name and its argument[s])
 const char *mgl_parser_cmd_frmt(HMPR pr, const char *name);

/// Get name of command with number n
 const char *mgl_parser_cmd_name(HMPR pr, long id);

/// Get number of defined commands
long  mgl_parser_cmd_num(HMPR pr);


/// Return result of formula evaluation
HMDT  mgl_parser_calc(HMPR pr, const char *formula);

HMDT  mgl_parser_calcw(HMPR pr, const wchar_t *formula);

/// Return result of formula evaluation as complex data
HADT  mgl_parser_calc_complex(HMPR pr, const char *formula);

HADT  mgl_parser_calc_complexw(HMPR pr, const wchar_t *formula);