Packages_2024/mgl2_8.0.1_(mathgl)/mgl2/canvas_cf.inc

procedure mgl_ask_perspective(gr: THMGL; val: double); cdecl; external libmgl;
procedure mgl_view(gr: THMGL; TetX: double; TetZ: double; TetY: double); cdecl; external libmgl;
procedure mgl_zoom(gr: THMGL; x1: double; y1: double; x2: double; y2: double); cdecl; external libmgl;

function mgl_create_parser: THMPR; cdecl; external libmgl;
function mgl_create_parser_: Tuintptr_t; cdecl; external libmgl;
function mgl_use_parser(p: THMPR; inc: longint): Tclong; cdecl; external libmgl;
procedure mgl_delete_parser(p: THMPR); cdecl; external libmgl;
procedure mgl_parser_add_param(p: THMPR; id: longint; str: pchar); cdecl; external libmgl;
procedure mgl_parser_add_paramw(p: THMPR; id: longint; str: Pwchar_t); cdecl; external libmgl;
function mgl_parser_add_var(p: THMPR; name: pchar): PmglDataA; cdecl; external libmgl;
function mgl_parser_add_varw(p: THMPR; name: Pwchar_t): PmglDataA; cdecl; external libmgl;
function mgl_parser_find_var(p: THMPR; name: pchar): PmglDataA; cdecl; external libmgl;
function mgl_parser_find_varw(p: THMPR; name: Pwchar_t): PmglDataA; cdecl; external libmgl;
function mgl_parser_get_var(p: THMPR; id: Tculong): PmglDataA; cdecl; external libmgl;
function mgl_parser_num_var(p: THMPR): Tclong; cdecl; external libmgl;
function mgl_parser_get_const(p: THMPR; id: Tculong): PmglNum; cdecl; external libmgl;
function mgl_parser_num_const(p: THMPR): Tclong; cdecl; external libmgl;
procedure mgl_parser_del_var(p: THMPR; name: pchar); cdecl; external libmgl;
procedure mgl_parser_del_varw(p: THMPR; name: Pwchar_t); cdecl; external libmgl;
procedure mgl_parser_del_all(p: THMPR); cdecl; external libmgl;
procedure mgl_parser_load(pr: THMPR; dll_name: pchar); cdecl; external libmgl;
procedure mgl_rk_step(pr: THMPR; eqs: pchar; vars: pchar; dt: Tmreal); cdecl; external libmgl;
procedure mgl_rk_step_w(pr: THMPR; eqs: Pwchar_t; vars: Pwchar_t; dt: Tmreal); cdecl; external libmgl;
procedure mgl_parser_openhdf(p: THMPR; fname: pchar); cdecl; external libmgl;
function mgl_parse_line(gr: THMGL; p: THMPR; str: pchar; pos: longint): longint; cdecl; external libmgl;
function mgl_parse_linew(gr: THMGL; p: THMPR; str: Pwchar_t; pos: longint): longint; cdecl; external libmgl;
procedure mgl_parse_file(gr: THMGL; p: THMPR; fp: PFILE; print: longint); cdecl; external libmgl;
procedure mgl_parse_text(gr: THMGL; p: THMPR; str: pchar); cdecl; external libmgl;
procedure mgl_parse_textw(gr: THMGL; p: THMPR; str: Pwchar_t); cdecl; external libmgl;
procedure mgl_parser_restore_once(p: THMPR); cdecl; external libmgl;
procedure mgl_parser_allow_setsize(p: THMPR; a: longint); cdecl; external libmgl;
procedure mgl_parser_allow_file_io(p: THMPR; a: longint); cdecl; external libmgl;
procedure mgl_parser_allow_dll_call(p: THMPR; a: longint); cdecl; external libmgl;
procedure mgl_parser_stop(p: THMPR); cdecl; external libmgl;
procedure mgl_parser_variant(p: THMPR; var_: longint); cdecl; external libmgl;
procedure mgl_parser_start_id(p: THMPR; id: longint); cdecl; external libmgl;
function mgl_parser_cmd_type(pr: THMPR; name: pchar): longint; cdecl; external libmgl;
function mgl_parser_cmd_desc(pr: THMPR; name: pchar): pchar; cdecl; external libmgl;
function mgl_parser_cmd_frmt(pr: THMPR; name: pchar): pchar; cdecl; external libmgl;
function mgl_parser_cmd_name(pr: THMPR; id: Tclong): pchar; cdecl; external libmgl;
function mgl_parser_cmd_num(pr: THMPR): Tclong; cdecl; external libmgl;

function mgl_parser_calc(pr: THMPR; formula: pchar): THMDT; cdecl; external libmgl;
function mgl_parser_calcw(pr: THMPR; formula: Pwchar_t): THMDT; cdecl; external libmgl;
function mgl_parser_calc_complex(pr: THMPR; formula: pchar): THADT; cdecl; external libmgl;
function mgl_parser_calc_complexw(pr: THMPR; formula: Pwchar_t): THADT; cdecl; external libmgl;

// === Konventiert am: 26-6-25 18:54:41 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}



{$ENDIF read_implementation}
